# ift6162-hw2-2025

./: ASSIGNMENT.md  README.md  main.py  pyproject.toml  train_simple.py  train_surrogate.py
calciner/: surrogate_env.py
docs/: model.md
hw2/: __init__.py  ppo.py  reinforce.py  td3.py
models/: ppo_complex_model.pth  ppo_simple_model.pth  reinforce_simple_model.pth  td3_simple_model.pth
scripts/: train.py  visualize_surrogate.py
